--- a/SportsStore/Views/Home/Index.cshtml
+++ b/SportsStore/Views/Home/Index.cshtml
@@ -1,6 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model IQueryable<Product>
+
+<h4>Welcome to SportsStore</h4>
+
+@foreach (var item in Model)
+{
+    <div>
+        <h3>@item.Name</h3>
+        @item.Category
+        <h4>@item.Price.ToString("c")</h4>
+    </div>
 }
-    <h4>Welcome to SportsStore</h4>
