--- a/SportsStore/Views/_ViewImports.cshtml
+++ b/SportsStore/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SportsStore.Models
+@using SportsStore.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
+@addTagHelper *, SportsStore
