--- a/SportsStore/Views/Home/Index.cshtml
+++ b/SportsStore/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@model IQueryable<Product>
+﻿@model ProductsListViewModel
 
 <h4>Welcome to SportsStore</h4>
 
-@foreach (var item in Model)
+@foreach (var item in Model.Products)
 {
     <div>
         <h3>@item.Name</h3>
@@ -10,3 +10,5 @@
         <h4>@item.Price.ToString("c")</h4>
     </div>
 }
+
+<div page-model="@Model.PagingInfo" page-action="Index"></div>
