--- a/SportsStore/Views/Shared/_Layout.cshtml
+++ b/SportsStore/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <title>SportsStore</title>
 </head>
 <body>
