--- a/SportsStore/Pages/Admin/Index.cshtml
+++ b/SportsStore/Pages/Admin/Index.cshtml
@@ -6,9 +6,16 @@
     <title>SportsStore Admin</title>
     <link href="/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <base href="/" />
+    
 </head>
 <body>
     <component type="typeof(Routed)" render-mode="Server" />
-    <script src="/_framework/blazor.server.js"></script>
+    <script src="_framework/blazor.server.js"></script>
+
+    <script>
+        Blazor.defaultReconnectionHandler._reconnectCallback = function (d) {
+            document.location.reload();
+        }
+    </script>
 </body>
 </html>
