--- a/SportsStore/Pages/Admin/Index.cshtml
+++ b/SportsStore/Pages/Admin/Index.cshtml
@@ -1,12 +1,15 @@
 ﻿@page "/admin"
 @{ Layout = null; }
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>SportsStore Admin</title>
     <link href="/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <base href="/" />
-    
+
 </head>
 <body>
     <component type="typeof(Routed)" render-mode="Server" />
